<?xml version="1.0"?>
<package>
  <name>pointcloud_publisher</name>
  <version>0.1.0</version>
  <description>ROS node to publish a  pointcloud from file to a ROS PointCloud2 topic</description>
  <maintainer email="santosh.thoduka@gmail.com">Santosh Thoduka</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

</package>
